# loginext

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  OPTIMIZATIONS.md  README.md  agents.md  progress.md
config/: app_rules.example.txt  example.json
deploy/: PKGBUILD  install.sh  loginext-git.install
deploy/kwin/loginext-focus/: metadata.json
deploy/kwin/loginext-focus/contents/code/: main.js
deploy/loginext/: FETCH_HEAD  config  packed-refs
deploy/loginext/info/: refs
deploy/loginext/objects/info/: packs
deploy/loginext/objects/pack/: multi-pack-index  pack-5d58d1872ed0f540d52700f13d8975e605d789d1.idx  pack-5d58d1872ed0f540d52700f13d8975e605d789d1.pack  pack-5d58d1872ed0f540d52700f13d8975e605d789d1.rev  pack-857010806d94ccc1377347b0cecbdef9943101fa.idx  pack-857010806d94ccc1377347b0cecbdef9943101fa.pack  pack-857010806d94ccc1377347b0cecbdef9943101fa.rev  pack-b0b65596b0329017851c8e53b4b7264f940038a9.idx  pack-b0b65596b0329017851c8e53b4b7264f940038a9.pack  pack-b0b65596b0329017851c8e53b4b7264f940038a9.rev
deploy/loginext/refs/heads/: main
deploy/loginext/refs/tags/: v1.0.0
deploy/scripts/: loginext-logs
deploy/systemd/: loginext.service
deploy/udev/: 99-loginext.rules
src/: main.cpp
src/config/: args.cpp  args.hpp  constants.hpp  loader.cpp  loader.hpp  profile.hpp  settings.hpp
src/core/: device.cpp  device.hpp  emitter.cpp  emitter.hpp  event_loop.cpp  event_loop.hpp  pacer.cpp  pacer.hpp
src/heuristics/: scroll_state.cpp  scroll_state.hpp
src/ipc/: dispatch.cpp  dispatch.hpp  protocol.hpp  server.cpp  server.hpp
src/presets/: preset.hpp
src/scope/: app_hash.hpp  listener.cpp  listener.hpp  rules.cpp  rules.hpp  rules_loader.cpp  rules_loader.hpp
src/util/: log.cpp  log.hpp
tests/: CMakeLists.txt  README.md
tests/heuristics/: test_scroll_state.cpp
tests/scope/: test_rules.cpp
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: main.ts  style.css
ui/src-tauri/: Cargo.toml  README.md  tauri.conf.json
ui/src-tauri/src/: daemon.rs  ipc_bridge.rs  lib.rs  main.rs  service.rs
ui/src/components/: card.ts  segmented.ts  slider.ts  toggle.ts
ui/src/ipc/: client.ts
ui/src/views/: bug-report.ts  main.ts  rules.ts
