[package]
name        = "loginext-ui"
version     = "0.1.0"
edition     = "2021"
description = "LogiNext control panel — Tauri shell that bridges the UI to the daemon's UDS."
license     = "MIT"

[lib]
name       = "loginext_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
